--- a/env/docker/api/Dockerfile
+++ b/env/docker/api/Dockerfile
@@ -27,10 +27,15 @@ RUN php composer-setup.php
 RUN php -r "unlink('composer-setup.php');"
 RUN mv composer.phar /usr/local/bin/composer
 COPY . .
-COPY ./.conf/apache/api.conf /etc/apache2/sites-enabled
+COPY .env .
+RUN composer run post-root-package-install
+COPY env/conf/apache/api.conf /etc/apache2/sites-enabled
 RUN composer install
 RUN rm /etc/apache2/sites-enabled/000-default.conf
 RUN a2enmod rewrite
+RUN chown -R www-data:www-data .
+RUN find . -type f -exec chmod 644 {} \;
+RUN find . -type d -exec chmod 755 {} \;
+RUN chgrp -R www-data storage bootstrap/cache
+RUN chmod -R ug+rwx storage bootstrap/cache
 RUN chmod 777 storage/ -R
-VOLUME /var/www/api
-
