--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,19 @@
 version: '3'
+
 services:
 
-    db:
-      container_name: db
-      image: postgres:10
-      environment:
-        - POSTGRES_DB=test
-        - POSTGRES_USER=test
-        - POSTGRES_PASSWORD=test
-      command: -c "listen_addresses=*"
-      ports:
-        - "5432:5432"
-      networks:
-        - api-network
+  db:
+    container_name: db
+    image: postgres:10
+    environment:
+      - POSTGRES_DB=test
+      - POSTGRES_USER=test
+      - POSTGRES_PASSWORD=test
+    command: -c "listen_addresses=*"
+    ports:
+      - "5432:5432"
+    networks:
+      - api-network
 
   api:
     container_name: api
@@ -23,8 +24,13 @@ services:
       - "80:80"
     volumes:
       - ".:/var/www/api"
+      - "/var/www/api/vendor"
     networks:
       - api-network
+    depends_on:
+      - db
+    links:
+      - db
 
 networks:
   api-network:
