--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: db
     image: postgres:10
     environment:
-      - POSTGRES_DB=test
+      - POSTGRES_DB=postgres
       - POSTGRES_USER=test
       - POSTGRES_PASSWORD=test
     command: -c "listen_addresses=*"
