--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,8 @@ DB_CONNECTION=pgsql
 DB_HOST=db
 DB_PORT=5432
 DB_DATABASE=postgres
-DB_USERNAME=test
-DB_PASSWORD=test
+DB_USERNAME=user
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
