--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     image: postgres:10
     environment:
       - POSTGRES_DB=postgres
-      - POSTGRES_USER=test
-      - POSTGRES_PASSWORD=test
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=secret
     command: -c "listen_addresses=*"
     ports:
       - "5432:5432"
