--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,10 @@ jobs:
       - image: cimg/php:7.2.33
     steps:
       - checkout
-      - run: sudo docker-compose up -d
+      - run: docker-compose --version
+      - run: docker --version
+      - run: dockerd
+      - run: docker-compose up
 #      - run: env/scripts/docker_init.sh
 #      - run: composer self-update
 #      - restore_cache:
