--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - run: docker --version
       - run: sudo dockerd
       - run: sudo docker-compose up
-
+      - run: docker --version
 #      - run: env/scripts/docker_init.sh
 #      - run: composer self-update
 #      - restore_cache:
